--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
-    "express": "^4.18.2"
+    "async-exit-hook": "^2.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
@@ -29,5 +32,6 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.47.0",
     "nodemon": "^3.0.1"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
