--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGODB_URI='mongodb+srv://tanphatpham:tanphat123@cluster-tanphat.n1mbynp.mongodb.net/?retryWrites=true&w=majority'
 DATABASE_NAME='trello-database'
-APP_HOST='localhost'
-APP_PORT=8018
+
+LOCAL_DEV_APP_HOST='localhost'
+LOCAL_DEV_APP_PORT=8018
 
 AUTHOR='PhamTanPhat'
