API Register User

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI='mongodb+srv://tanphatpham:tanphat123@cluster-tanphat.n1mbynp.mongodb.net/?retryWrites=true&w=majority'
+MONGODB_URI='mongodb+srv://tanphatpham:tanphat123@cluster-tanphat.n1mbynp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-TanPhat'
 DATABASE_NAME='trello-database'
 
 LOCAL_DEV_APP_HOST='localhost'
