Verify Account - Login - JWT Tokens

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ LOCAL_DEV_APP_HOST='localhost'
 LOCAL_DEV_APP_PORT=8018
 
 AUTHOR='PhamTanPhat'
+
+WEBSITE_DOMAIN_DEVELOPMENT='http://localhost:5173'
+WEBSITE_DOMAIN_PRODUCTION=''
+
+BREVO_API_KEY=''
+ADMIN_EMAIL_ADDRESS=''
+ADMIN_EMAIL_NAME='PhamTanPhat'
+
+ACCESS_TOKEN_SECRET_SIGNATURE='trello-mern-web-application-ryanpham-yna'
+ACCESS_TOKEN_LIFE='1h'
+
+REFRESH_TOKEN_SECRET_SIGNATURE='trello-mern-web-application-ryanpham-yna'
+REFRESH_TOKEN_LIFE='14 days'
